[tool.poetry]
name = "amplitude-logger"
version = "1.0.0"
description = "Amplitude API implementation"
readme = "README.md"
homepage = "https://github.com/zagran/amplitude-logger"
authors = ["Serhii Zahranychnyi <zagranlab@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
